# deep_research_agent

./: .gitignore  README.md  deepseach-agent.md  pyproject.toml  run.sh
.streamlit/: config.toml
src/deep_research_agent/: agent.py  crew.py  main.py
src/deep_research_agent/config/: agents.yaml  tasks-org.yaml  tasks.yaml
src/deep_research_agent/tools/: current_date_tool.py  tavily_tool.py
src/ui/: app.py  constants.py
src/ui/sections/: footer.py  header.py  input_form.py  metadata.py  response.py  sidebar.py
src/ui/static/: style.css
