[project]
name = "deep_research_agent"
version = "0.1.0"
description = "deep-research-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0",
    "loguru",
    "arize-phoenix-otel",
    "openinference-instrumentation-crewai",
    "openinference-instrumentation-litellm",
    "tavily-python",
    "streamlit" 
]

[project.scripts]
deep_research_agent = "deep_research_agent.main:run"
run_crew = "deep_research_agent.main:run"
train = "deep_research_agent.main:train"
replay = "deep_research_agent.main:replay"
test = "deep_research_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
